[package]
name = "dma-heap"
version = "0.2.2"
authors = ["Maxime Ripard <maxime@cerno.tech>"]
description = "Linux DMA-Buf Heap Abstraction Library"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
keywords = ["linux", "dma", "dma-buf", "heap"]
categories = ["api-bindings", "os::linux-apis"]
repository = "https://github.com/mripard/dma-heap/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["fs", "ioctl"] }
log = "0.4.20"
strum = "0.26.1"
strum_macros = "0.25.3"
thiserror = "1.0.56"
